# RG-fuzzing

./: .gitignore  README.md  attach.sh  draw.py  newangora.sh  newdoc.sh  readme.md
RG-IJON/: afl-analyze  afl-as  afl-clang-fast  afl-fuzz  afl-fuzz.c  afl-gcc  afl-gotcpu  afl-ijon-min.c  afl-ijon-min.h  afl-showmap  afl-tmin  config.h
RG-IJON/llvm_mode/: afl-clang-fast.c  afl-llvm-rt.o.c  afl-rt.h  build.sh
RGchecker/: CMakeLists.txt  RGchecker.cpp  mytest  parser.cpp  parser.h
RGchecker/matcher/: @  CMakeLists.txt  a.out  div.py  matcher.cpp  tis  tis.cpp  tis.h  tis_run.py
annotator/: Board_Game  Board_Game_tis_issue  Childs_Game  Recipe_Database  annotator.py  newrd.json  rd.json  readme  test.json
cb-multios-aif/: aif-build.sh
cb-multios-cov/: cov-build.sh
cb-multios-fast/: ang-build.sh
cb-multios-vani/: vani-build.sh
cgc-AI-list/: Barcoder-res.txt  CNMP-res.txt  CableGrindLlama-res.txt  HackMan-res.txt  Recipe_Database-res.txt  readme.md
daemon-monitor/: Recipe_Database.aif  Recipe_Database.cov  Recipe_Database_RG_1.csv  aggregate_edge.sh  autoplot.sh  dirscanto.sh  monitor.py  old-run_monitor.sh  parse.py  readme  refresh-aif.sh  refresh-cov.sh  refresh-vani.sh  refresh.sh  run_fuzzer.sh  run_monitor.sh  run_rgfuzz.sh  run_vanifuzz.sh  run_vanimoni.sh  sancov.py  test  test.c
daemon-monitor/afl_queue/: id:000001,src:000000,op:havoc,rep:4,+cov  id:000002,src:000000,op:havoc,rep:4  id:000003,src:000000,op:havoc,rep:4  id:000004,src:000000,op:havoc,rep:2  id:000007,src:000000,op:havoc,rep:2  id:000009,src:000000,op:havoc,rep:8  id:000010,src:000000,op:havoc,rep:2  id:000011,src:000000,op:havoc,rep:2  id:000012,src:000000,op:havoc,rep:2  id:000014,src:000000,op:havoc,rep:2,+cov  id:000015,src:000000,op:havoc,rep:4  id:000016,src:000000,op:havoc,rep:2  id:000017,src:000004+000006,op:splice,rep:2  id:000018,src:000005+000017,op:splice,rep:8  id:000019,src:000007,op:havoc,rep:8,+cov  id:000020,src:000007,op:havoc,rep:8  id:000021,src:000007,op:havoc,rep:2  id:000022,src:000007,op:havoc,rep:2,+cov  id:000023,src:000007,op:havoc,rep:4,+cov  id:000024,src:000007,op:havoc,rep:2,+cov  id:000025,src:000007,op:havoc,rep:4,+cov  id:000026,src:000007,op:havoc,rep:32  id:000027,src:000007,op:havoc,rep:16  id:000028,src:000007,op:havoc,rep:4,+cov  id:000029,src:000007,op:havoc,rep:2,+cov  id:000030,src:000007,op:havoc,rep:4  id:000031,src:000007,op:havoc,rep:2  id:000032,src:000007,op:havoc,rep:16  id:000033,src:000019,op:havoc,rep:2  id:000034,src:000023,op:havoc,rep:2  id:000035,src:000024,op:havoc,rep:4  id:000036,src:000024,op:havoc,rep:4  id:000037,src:000024,op:havoc,rep:4  id:000038,src:000024,op:havoc,rep:4  id:000039,src:000025,op:havoc,rep:4  id:000040,src:000025,op:havoc,rep:8,+cov  id:000041,src:000025,op:havoc,rep:2,+cov  id:000042,src:000025,op:havoc,rep:16  id:000043,src:000025,op:havoc,rep:8  id:000044,src:000025,op:havoc,rep:16,+cov  (+112 more)
daemon-monitor/multi-plot/: aggregate_edge.sh  autoplot.sh  dirscanto.sh  draw.py
daemon-monitor/multi-plot/0208-backup/: Board_Game_IJON_1.csv  Board_Game_IJON_2.csv  Board_Game_IJON_3.csv  Board_Game_newRG_1.csv  Board_Game_newRG_2.csv  Board_Game_newRG_3.csv  Childs_Game_IJON_1.csv  Childs_Game_IJON_2.csv  Childs_Game_IJON_3.csv  Childs_Game_newRG_1.csv  Childs_Game_newRG_2.csv  Childs_Game_newRG_3.csv  Recipe_Database_IJON_1.csv  Recipe_Database_IJON_2.csv  Recipe_Database_IJON_3.csv  Recipe_Database_newRG_1.csv  Recipe_Database_newRG_2.csv  Recipe_Database_newRG_3.csv
daemon-monitor/output/: Recipe_Database.cov.txt
daemon-monitor/plot/: draw.py
daemon-monitor/seed_output/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+117 more)
daemon-monitor/targets/: Board_Game.aif  Board_Game.cov  Board_Game.vani  Childs_Game.aif  Childs_Game.cov  Childs_Game.vani  Recipe_Database.aif  Recipe_Database.cov  Recipe_Database.vani
dataset/: Board_Game
dataset/Childs_Game_tis/: Childs_Game
dataset/Childs_Game_tis/tis_output/: board.c:108:-1.if_0.json  board.c:108:-1.if_1.json  board.c:108:-1.if_10.json  board.c:108:-1.if_100.json  board.c:108:-1.if_101.json  board.c:108:-1.if_102.json  board.c:108:-1.if_103.json  board.c:108:-1.if_104.json  board.c:108:-1.if_105.json  board.c:108:-1.if_106.json  board.c:108:-1.if_107.json  board.c:108:-1.if_108.json  board.c:108:-1.if_109.json  board.c:108:-1.if_11.json  board.c:108:-1.if_110.json  board.c:108:-1.if_111.json  board.c:108:-1.if_112.json  board.c:108:-1.if_113.json  board.c:108:-1.if_115.json  board.c:108:-1.if_119.json  board.c:108:-1.if_12.json  board.c:108:-1.if_122.json  board.c:108:-1.if_123.json  board.c:108:-1.if_125.json  board.c:108:-1.if_127.json  board.c:108:-1.if_128.json  board.c:108:-1.if_129.json  board.c:108:-1.if_13.json  board.c:108:-1.if_131.json  board.c:108:-1.if_132.json  board.c:108:-1.if_135.json  board.c:108:-1.if_136.json  board.c:108:-1.if_137.json  (+13325 more)
dockerdir/: Dockerfile  create.sh  readme
ijon/: afl-analyze  afl-clang-fast  afl-gotcpu  afl-ijon-min.h  afl-tmin
ijon/llvm_mode/: afl-llvm-rt.o.c  afl-rt.h
monitor/: .gitignore  Dockerfile  execute.sh  readme
monitor/cb-multios/: CMakeLists.txt  challenges.txt  del.sh  get198.sh  list.txt  loadcb.sh  rebuild.sh  rfuzz-pending.txt  rfuzz.txt  trace-pc-guard-cb.cc
monitor/toy/: covered.txt  script.sh  trace-pc-guard-cb.cc  trace-pc-guard-example.cc
old-rg-IJON/: afl-analyze  afl-as  afl-fuzz  afl-fuzz.c  afl-gcc  afl-ijon-min.c  afl-ijon-min.h  afl-tmin
old-rg-IJON/llvm_mode/: afl-llvm-rt.o.c
scripts/: CMakeLists.txt  build_cbs.sh  diff.py  rewriter.sh  rules  rules.proto  rules_data  rules_pb2.py
test/: build-04.sh  build.sh  ijon-build.sh  loop01.c  loop02.c  loop03.c  loop04-ijon.c  loop04.c  loop05.c  loop06.c  loop07.c  loop08.c  loop09.c  loop10.c  run.sh  run04.sh  runRD.sh  small.c
(+234 files in other folders)
